# agent-manager

./: .gitignore  Makefile
.github/workflows/: e2e.yaml
agent-manager-service/api/: agent_apikey_routes.go  app.go  gateway_internal_routes.go  mcp_proxy_routes.go
agent-manager-service/config/: config.go  config_loader.go
agent-manager-service/controllers/: agent_apikey_controller.go  agent_controller.go  gateway_internal_controller.go  mcp_proxy_controller.go
agent-manager-service/db_migrations/: 023_create_mcp_proxies.go
agent-manager-service/docs/: api_v1_openapi.yaml
agent-manager-service/instrumentation/: catalog.go  catalog_test.go
agent-manager-service/mcp/: server.go  setup.go
agent-manager-service/models/: agent_configuration.go  artifact.go  gateway_compat.go  mcp_proxy.go
agent-manager-service/repositories/: agent_configuration_repository.go  deployment_repository.go  env_agent_mcp_mapping_repository.go  gateway_repository.go  mcp_proxy_repository.go
agent-manager-service/services/: agent_apikey_service.go  agent_configuration_service.go  agent_manager.go  agent_manager_test.go  gateway_events_service.go  mcp_proxy_deployment.go  mcp_proxy_service.go
agent-manager-service/utils/: errors.go
agent-manager-service/wiring/: params.go  wire.go  wire_gen.go
console/: rush.json
deployments/: docker-compose.yml
docs/: quick-start.md
documentation/: docusaurus.config.ts
libs/amp-instrumentation/: pyproject.toml
libs/amp-instrumentation/src/amp_instrumentation/: __init__.py
python-instrumentation-provider/: RELEASING.md
(+194 files in other folders)
